@@ -3,6 +3,7 @@ delete $ENV{CONVOS_SECRETS};
 
 my $convos = Convos->new;
 is $convos->config->{backend}, 'Convos::Core::Backend::File', 'default backend';
+is $convos->config->{home}, $ENV{CONVOS_HOME}, 'home from ENV';
 is $convos->config->{organization_name}, 'Nordaaker', 'default name';
 is $convos->config->{hypnotoad}{pid_file}, undef, 'default pid_file';
 ok !$convos->sessions->secure, 'insecure sessions';
@@ -14,10 +15,12 @@ $ENV{CONVOS_FRONTEND_PID_FILE} = 'pidfile.pid';
 $ENV{CONVOS_ORGANIZATION_NAME} = 'cool.org';
 $ENV{CONVOS_SECRETS}           = 'super,duper,secret';
 $ENV{CONVOS_SECURE_COOKIES}    = 1;
-$convos                        = Convos->new;
-is $convos->config->{backend}, 'Convos::Core::Backend', 'env backend';
-is $convos->config->{organization_name}, 'cool.org', 'env name';
+delete $ENV{CONVOS_HOME};
+$convos = Convos->new;
+is $convos->config->{backend},           'Convos::Core::Backend',          'env backend';
+like $convos->config->{home},            qr{\W+\.local\W+share\W+convos$}, 'default home';
+is $convos->config->{organization_name}, 'cool.org',                       'env name';
 ok $convos->sessions->secure, 'secure sessions';
-is_deeply($convos->secrets, [qw( super duper secret )], 'env secrets');
+is_deeply($convos->secrets, [qw(super duper secret)], 'env secrets');
 
 done_testing;
